[metadata]
name = eo-validation
version = attr: eo_validation.__version__
author = Jordan A. Caraballo-Vega
author_email = jordan.a.caraballo-vega@nasa.gov
url = https://github.com/nasa-nccs-hpda/eo-validation
description = Collaborative validation tools for remote sensing imagery
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = validation, rioxarray, rasterio
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    geopandas
    rioxarray
    xarray
    rasterio
    pandas
    numpy
    tqdm
    localtileserver
